--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -8,7 +8,7 @@ $screen-xl: 1600px;
 $screen-ul: 1900px;
 
 /* Fonts */
-$font-family: "Kumbh Sans", sans-serif;
+$font-family: "Lato", sans-serif;
 $font-family-secondary: sans-serif;
 $font-size: 14px;
 $font-weight: normal;
